# ros2-gateway-analysis

./: .gitignore  LICENSE  README.md  analyze_latency.py  analyze_resource_usage.py  analyze_ros_jitter.py  analyze_rpm.py  compare_resource_usage_results.py  latency_analysis.py  logs_to_csv.py  measure_resource_usage.py  pyproject.toml  record_resource_usage.py  rosbag-to-csv.py  run_all.sh  wheel_logs_to_csv.py
recordings/1-nodes/: resource-usage.csv  results.txt
recordings/1-nodes-no-traffic/: resource-usage.csv  results.txt
recordings/10-nodes/: resource-usage.csv  results.txt
recordings/10-nodes-no-traffic/: resource-usage.csv  results.txt
recordings/2025-08-14/1-nodes/: docker_stats_20250814-172019.csv  results.txt
recordings/2025-08-14/1-nodes-no-traffic/: docker_stats_20250814-171856.csv  results.txt
recordings/2025-08-14/10-nodes/: docker_stats_20250814-171658.csv  results.txt
recordings/2025-08-14/10-nodes-no-traffic/: docker_stats_20250814-171539.csv  results.txt
recordings/2025-08-14/5-nodes/: docker_stats_20250814-172435.csv  results.txt
recordings/2025-08-14/5-nodes-no-traffic/: docker_stats_20250814-172320.csv  results.txt
recordings/2025-08-14/can-to-ros-latency/: rosbag-can-to-ros.mcap
recordings/5-nodes/: resource-usage.csv  results.txt
recordings/5-nodes-no-traffic/: resource-usage.csv  results.txt
recordings/can-to-ros-latency/: filtered-logs.csv  rosbag-can-to-ros.mcap
recordings/can-to-ros-latency/analysis/: results.txt  (+1 more)
recordings/ros-jitter/: jitter_results.csv
recordings/wheel-rpm/: filtered-logs.csv  rosbag2.mcap
(+5 files in other folders)
